--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.13.1
+ 
+  cloud_firestore: 5.6.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.13.1
   
+
+  # State Management
+  provider: ^6.1.1
+
+  # UI Enhancements
+  google_fonts: ^6.1.0
+  flutter_launcher_icons: ^0.13.1
+
+  # Navigation (optional)
+  go_router: ^13.2.1
 
 dev_dependencies:
   flutter_test:
