--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,3 +47,4 @@ flutter {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.14.0')
 }
+apply plugin: 'com.google.gms.google-services'
