--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   firebase_core: ^3.13.1
   firebase_storage: ^12.4.6
+  firebase_auth: ^5.5.3
   
 
   # State Management
