--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,23 +31,24 @@ dependencies:
   flutter:
     sdk: flutter
  
-  cloud_firestore: 5.6.8
+  cloud_firestore: ^4.9.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.13.1
+  firebase_core: ^2.18.0
   
 
   # State Management
   provider: ^6.1.1
+  intl: ^0.18.1
 
   # UI Enhancements
   google_fonts: ^6.1.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.4
 
   # Navigation (optional)
-  go_router: ^13.2.1
+  go_router: ^15.1.3
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +59,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
